--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,21 @@ Module.symvers
 Mkfile.old
 dkms.conf
 bin/
+
+# VsCode
+**/.vscode/
+**/.vscode/settings.json
+.vscode/
+.vscode/*
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
+
+# Others
+*.patch
+.DS_Store
+Thumbs.db
+.gdb*
