Initial implementation of steganography for hiding secret in images

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "stdio.h": "c",
         "bmp.h": "c",
-        "shadowgen.h": "c"
+        "shadowgen.h": "c",
+        "steganography.h": "c"
     }
 }
