Refactor to get full path of entry from utils library

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "stdio.h": "c",
         "bmp.h": "c",
         "shadowgen.h": "c",
-        "steganography.h": "c"
+        "steganography.h": "c",
+        "utils.h": "c"
     }
 }
